[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Peer.gd" type="Script" id=1]
[ext_resource path="res://fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]

[node name="Peer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerName" type="Label" parent="."]
margin_right = 700.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 2 )

[node name="LocalVar" type="Label" parent="."]
margin_top = 25.0
margin_right = 700.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
align = 3
valign = 3

[node name="PuppetVar" type="Label" parent="."]
margin_top = 50.0
margin_right = 700.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
align = 3
valign = 3

[node name="LocalLabel" type="Label" parent="."]
margin_top = 75.0
margin_right = 700.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 2 )
text = "new local var :"
align = 3
valign = 3

[node name="LocalTextEdit" type="LineEdit" parent="."]
margin_top = 93.0
margin_right = 700.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
caret_blink = true

[node name="PuppetLabel2" type="Label" parent="."]
margin_top = 121.0
margin_right = 700.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 2 )
text = "new puppet var :"
align = 3
valign = 3

[node name="PuppetTextEdit" type="LineEdit" parent="."]
margin_top = 139.0
margin_right = 700.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 2 )
caret_blink = true

[node name="Button" type="Button" parent="."]
margin_top = 167.0
margin_right = 700.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 2 )
text = "Click Me!"

[connection signal="text_entered" from="LocalTextEdit" to="." method="_on_LocalTextEdit_text_entered"]
[connection signal="text_entered" from="PuppetTextEdit" to="." method="_on_PuppetTextEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
